# portal

./: .gitignore  Cargo.toml  Makefile.toml  README.md
bins/pgun/: Cargo.toml
bins/pgun/src/: main.rs
bins/pgun/src/bench/: bencher.rs  config.rs  mod.rs  result.rs
bins/portal-client/: Cargo.toml
bins/portal-client/src/: main.rs
bins/portal-client/src/bench/: mod.rs  result.rs  summary.rs
bins/portal-ctl/: Cargo.toml
bins/portal-server/: Cargo.toml
bins/portalctl/: Cargo.toml  README.md
bins/portald/: Cargo.toml
bins/portald/src/: main.rs  run.rs
bins/resolved/: Cargo.toml
crates/client/: Cargo.toml  README.md
crates/client/src/: builder.rs  connection.rs  error.rs  lib.rs
crates/client/src/single/: builder.rs  mod.rs
crates/client/tests/: client.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  macros.rs  resolv.rs  timeout.rs
crates/common/tests/: resolv.rs
crates/proto/: Cargo.toml
crates/proto/src/: constants.rs  error.rs  lib.rs
crates/proto/src/transfer/: background.rs  handler.rs  mod.rs  multiplexer.rs  protocol.rs  transport.rs
crates/proto/src/tree/: mod.rs
crates/proto/src/types/: mod.rs  opcode.rs  rcode.rs
crates/proto/src/types/dns/: header.rs  message.rs  mod.rs  name.rs  query.rs  question.rs
crates/proto/src/types/dns/name/: label.rs  mod.rs
crates/proto/src/types/edns/: code.rs  header.rs  mod.rs
crates/proto/src/types/edns/data/: cookie.rs  mod.rs
crates/proto/src/types/rr/: classes.rs  mod.rs  rheader.rs  types.rs
crates/proto/src/types/rr/rdata/: hinfo.rs  minfo.rs  mod.rs  mx.rs  null.rs  opt.rs  soa.rs  txt.rs
crates/proto/src/zone/: error.rs  mod.rs
crates/proto/tests/: name.rs  tree.rs  zone.rs
crates/proto/tests/files/: test.hints
crates/recursor/: Cargo.toml
crates/resolver/: Cargo.toml
crates/resolver/src/: error.rs  forwarding.rs  iterative.rs  lib.rs  mode.rs  recursive.rs
crates/server/: Cargo.toml
crates/server/src/: accept.rs  error.rs  handler.rs  lib.rs  request.rs  response.rs  tcp.rs  udp.rs
crates/server/src/cache/: mod.rs  status.rs
crates/server/src/config/: mod.rs
crates/server/src/config/options/: collector.rs  mod.rs  resolver.rs  server.rs
extra/: bench.toml  config.toml
extras/: bench.toml
portal-bin/: Cargo.toml
portal-bin/src/: main.rs  run.rs
portal-client/: Cargo.toml
portal-client/src/: main.rs
src/: error.rs  errors.rs  lib.rs  main.rs
src/binary/: error.rs  mod.rs
src/cache/: mod.rs
src/client/: builder.rs  error.rs  mod.rs
src/cmd/: error.rs  mod.rs  run.rs
src/config/: error.rs  errors.rs  mod.rs
src/config/options/: collector.rs  resolver.rs  server.rs
src/constants/: dns.rs  misc.rs  mod.rs  udp.rs  zone.rs
src/errors/: client.rs  config.rs  mod.rs  proto.rs  server.rs
src/macros/: mod.rs
src/pack/: error.rs  mod.rs  unpack.rs
src/packing/: buffer.rs  error.rs  errors.rs  mod.rs  pack.rs  unpack.rs
src/resolv/: mod.rs
src/resolver/: error.rs  forwarding.rs  iterative.rs  mod.rs  mode.rs  recursive.rs
src/server/: accept.rs  error.rs  handler.rs  mod.rs  request.rs  response.rs  send.rs  tcp.rs  udp.rs
src/tree/: mod.rs
src/types/: ip_version.rs  mod.rs  opcode.rs  rcode.rs  sockets.rs  udp.rs
src/types/dns/: header.rs  message.rs  mod.rs  name.rs  query.rs  question.rs
src/types/edns/: code.rs  data.rs  header.rs  mod.rs
src/types/edns/data/: cookie.rs  mod.rs
src/types/rr/: a.rs  aaaa.rs  classes.rs  cname.rs  mod.rs  rheader.rs  types.rs
src/types/rr/rdata/: a.rs  hinfo.rs  minfo.rs  mod.rs  mx.rs  name.rs  null.rs  opt.rs  soa.rs  txt.rs
src/types/rr/records/: a.rs  aaaa.rs  cname.rs  hinfo.rs  mb.rs  md.rs  mf.rs  mg.rs  minfo.rs  mod.rs  mr.rs  mx.rs  ns.rs  null.rs  opt.rs  ptr.rs  soa.rs  txt.rs
src/utils/: mod.rs  network.rs  timeout.rs
src/zone/: error.rs  mod.rs
tests/: client.rs  name.rs  resolv.rs  tree.rs  zone.rs
