[workspace]
members = [
  ".",
  "portal-ctl",
  "portal-bin",
  "portal-client"
]

[package]
name = "portal"
version = "0.0.1"
edition = "2021"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
enum_dispatch = "0.3.8"
toml = "0.5.9"
rand = "0.8.5"

[workspace.dependencies]
tokio = { version = "1.20.1", features = ["net", "sync", "rt", "rt-multi-thread", "macros", "time"] }
thiserror = "1.0.37"
