[package]
name = "pgun"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }
portal = { path = "../../" }
tokio = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
spinoff = "0.7.0"
anyhow = "1.0.68"
