[package]
name = "pgun"
version = "0.1.0"
edition = "2021"

[dependencies]
portal-proto = { path = "../../crates/proto", features = ["clap"] }
portal-common = { path = "../../crates/common" }
portal-client = { path = "../../crates/client" }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
spinoff = "0.7.0"
anyhow = "1.0.68"
