[package]
name = "portal-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gun"
path = "src/main.rs"

[dependencies]
thiserror = { workspace = true }
portal = { path = "../../" }
tokio = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
toml = { workspace = true }
rand = { workspace = true }
spinoff = "0.7.0"
anyhow = "1.0.68"
