[package]
name = "portal-proto"
version = "0.0.1"
edition = "2021"

[lib]
name = "portal_proto"
path = "src/lib.rs"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
binbuf = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
