[package]
name = "portal-proto"
version = "0.0.1"
edition = "2021"

[lib]
name = "portal_proto"
path = "src/lib.rs"

[features]
clap = ["dep:clap"]

[dependencies]
tokio = { workspace = true, features = ["tracing"] }
clap = { workspace = true, optional = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
binbuf = { workspace = true }
snafu = { workspace = true }
serde = { workspace = true }
