[package]
name = "portal-resolver"
version = "0.0.1"
edition = "2021"

[lib]
name = "portal_resolver"
path = "src/lib.rs"

[dependencies]
portal-client = { path = "../client" }
portal-common = { path = "../common" }
portal-proto = { path = "../proto" }
enum_dispatch = { workspace = true }
async-trait = { workspace = true }
snafu = { workspace = true }
