[package]
name = "portal-server"
version = "0.0.1"
edition = "2021"

[lib]
name = "portal_server"
path = "src/lib.rs"

[dependencies]
portal-resolver = { path = "../../crates/resolver" }
portal-common = { path = "../../crates/common" }
portal-proto = { path = "../../crates/proto" }
async-trait = { workspace = true }
binbuf = { workspace = true }
snafu = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
